--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block titulo %}
+        {{ titulo }}
+    {% endblock %}</title>
 </head>
 <body>
+    <div>
+    <!-- Aqui estarao as paginas -->
+        
+    <!-- aqui fica o usuario -->
+    </div>
 
+    {% block conteudo %}
+    
+    {% endblock %}
+
+    <script src=""></script>
 </body>
 </html>
