--- a/QRcodeStock/templates/listagem/lotes.html
+++ b/QRcodeStock/templates/listagem/lotes.html
@@ -30,11 +30,20 @@
       <div class="col-md-4 d-flex align-items-end">
         <button
           type="submit"
-          class="btn btn-success"
+          class="btn btn-primary"
           id="pesquisar-produto"
         >
           Pesquisar
         </button>
+          &nbsp;
+          <a href="/add_lot/">
+          <button
+                type="button"
+                class="btn btn-success"
+          >
+          Adicionar
+          </button>
+              </a>
       </div>
     </form>
 
@@ -73,10 +82,5 @@
       </table>
     </div>
   </div>
-
-
-  <script>
-    feather.replace()
-  </script>
 
 {% endblock %}
