--- a/QRcodeStock/templates/listagem/usuarios.html
+++ b/QRcodeStock/templates/listagem/usuarios.html
@@ -18,13 +18,22 @@
       </div>
 
       <div class="col-md-4 d-flex align-items-end">
-        <button 
-          type="submit" 
-          class="btn btn-success" 
+        <button
+          type="submit"
+          class="btn btn-primary"
           id="pesquisar-produto"
         >
           Pesquisar
         </button>
+          &nbsp;
+          <a href="/add_user/">
+          <button
+                type="button"
+                class="btn btn-success"
+            >
+          Adicionar
+          </button>
+              </a>
       </div>
     </form>
       
@@ -65,9 +74,5 @@
       </table>
     </div>
   </div>
-
-  <script>
-    feather.replace()
-  </script>
 
 {% endblock %}
