--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
                         <span style="color: #fff;">
                         {{ user.get_username }}
                         </span>
+                        &nbsp;
                         <a href="/accounts/logout">
                         <button class="btn btn-danger"
                                 type="button"
@@ -86,6 +87,7 @@
                         <span style="color: #fff;">
                         Desconhecido
                         </span>
+                        &nbsp;
                         <a href="/accounts/login">
                         <button class="btn btn-secondary"
                                 type="button">Log in</button>
@@ -113,6 +115,10 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    <script>
+      feather.replace()
+    </script>
 
 </body>
 </html>
