hot fix - criar conta

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
                                 type="button">Log in</button>
                         </a>
                         &nbsp;
-                        <a href="/accounts/register">
+                        <a href="/register">
                         <button class="btn btn-primary"
                                 type="button">Criar conta</button>
                         </a>
